# zsem-schedule-api

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml
src/: class.rs  main.rs  schedule.rs
src/test_assets/: example-response-o6.json  plany_o27.html  plany_o6.html
