[package]
name = "zsem_plan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.26", features = ["blocking"]}
scraper = "0.19.0"
anyhow = "1.0.81"
constcat = "0.5.0"
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }